--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-  <p><a href="https://github.com/BibekgurungGIT/pdfqr/blob/main/new%20menu.pdf">Click Here Event Info</a></p>
+  <p><a href="new menu.pdf">Click Here Event Info</a></p>
 </html>
